<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-speech</artifactId>
  <version>0.1.16</version>

  <name>vavi-speech</name>
  <description/>
  <url>https//github.com/umjammer/vavi-speech</url>
  <scm>
    <url>https//github.com/umjammer/vavi-speech</url>
  </scm>
  <issueManagement>
    <system>https//github.com/umjammer/vavi-speech/issues</system>
  </issueManagement>

  <properties>
    <freetts.groupId>com.github.umjammer.FreeTTS</freetts.groupId> <!-- org.jvoicexml / com.github.umjammer.FreeTTS -->
    <freetts.version>1.2.5</freetts.version>
  </properties>

  <profiles>
    <profile>
      <id>local (not on CI)</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
        <property>
          <name>env.JITPACK</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <id>read-properties</id>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <!-- don't touch: this works well on local -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.5</version>
            <configuration>
              <reuseForks>false</reuseForks>
              <trimStackTrace>false</trimStackTrace>
              <includes>
                <include>**/*</include>
              </includes>
              <environmentVariables>
                <GOOGLE_APPLICATION_CREDENTIALS>${google.credential}</GOOGLE_APPLICATION_CREDENTIALS>
                <DOCOMO_GOO_HIRAGANA_API_KEY>${docomo.goo.hiragana.apiKey}</DOCOMO_GOO_HIRAGANA_API_KEY>
                <RECRUIT_PROOFREADING_API_KEY>${recruit.proofreading.apiKey}</RECRUIT_PROOFREADING_API_KEY>
                <YAHOOJAPAN_API_KEY>${yahoo.japan.apiKey}</YAHOOJAPAN_API_KEY>
              </environmentVariables>
              <argLine>
                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
                -Dsudachi.dir=@{sudachi.dir}
                -Dsen.home=@{sen.home}
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>github workflow</id>
      <activation>
        <property>
          <name>env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <!-- don't touch: this works well on github actions -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.5</version>
            <configuration>
              <argLine>
                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
              </argLine>
              <reuseForks>false</reuseForks>
              <trimStackTrace>false</trimStackTrace>
              <includes>
                <include>**/*Test_*.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>32bit</id>
      <activation>
        <os>
          <arch>x86</arch>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>1.0-alpha-11</version>
            <extensions>true</extensions>
            <configuration>
              <javahClassNames>
                <javahClassName>vavi.speech.aquestalk.AquesTalk</javahClassName>
                <javahClassName>vavi.speech.aquestalk.AquesTalkDa</javahClassName>
                <javahClassName>vavi.speech.aquestalk2.AquesTalk2</javahClassName>
                <javahClassName>vavi.speech.aquestalk2.AquesTalk2Da</javahClassName>
              </javahClassNames>
              <javahSearchJNIFromDependencies>false</javahSearchJNIFromDependencies>
              <javahOS>darwin</javahOS>
              <compilerProvider>generic-classic</compilerProvider>
              <compilerStartOptions>
                <compilerStartOption>-g -Wall -O2 -fomit-frame-pointer -fPIC</compilerStartOption>
                <compilerStartOption>
                  -arch x86_64
                  -Itmp/macosx/AquesTalk2_Mac/SamplePrograms/HelloAqTk
                  -F${user.home}/Library/Frameworks
                  -framework AquesTalkEva
                </compilerStartOption>
              </compilerStartOptions>
              <sources>
                <source>
                  <directory>src/main/native/macosx</directory>
                  <fileNames>
                    <fileName>AquesTalk2Wrapper.m</fileName>
                  </fileNames>
                </source>
              </sources>
              <linkerStartOptions>
                <linkerStartOption>-dynamiclib -arch x86_64
                  -Ltmp/macosx/AquesTalk2_Mac/SamplePrograms/HelloAqTk
                  -lAuPlay
                  -F${user.home}/Library/Frameworks
                  -framework Cocoa
                  -framework AquesTalk2
                  -framework AudioUnit
                </linkerStartOption>
              </linkerStartOptions>
              <linkerFinalName/>
              <linkerEndOptions>
                <linkerEndOption>-o ${project.build.directory}/libAquesTalk2Wrapper.dylib</linkerEndOption>
              </linkerEndOptions>
            </configuration>
            <executions>
              <execution>
                <id>javah</id>
                <phase>compile</phase>
                <goals>
                  <goal>javah</goal>
                  <goal>compile</goal>
                  <goal>link</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>native2ascii-maven-plugin</artifactId>
        <version>2.0.1</version>
        <executions>
          <execution>
            <goals>
              <goal>resources</goal>
            </goals>
            <configuration>
              <includes>
                <include>*.properties</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>gitlab-maven2-vavi-sound-nda</id> <!-- TODO idk why this is needed??? -->
      <url>https://gitlab.com/api/v4/projects/30804899/packages/maven</url>
    </repository>
    <repository>
      <id>gitlab-maven2-sen</id>
      <url>https://gitlab.com/api/v4/projects/18523814/packages/maven</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.cloud</groupId>
        <artifactId>libraries-bom</artifactId>
        <version>26.73.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.14.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.16</version>
    </dependency>
    <dependency> <!-- JSAPI1 -->
      <groupId>com.github.umjammer</groupId>
      <artifactId>javax-speech</artifactId>
      <version>1.0.1</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-sandbox</artifactId>
      <version>1.0.11</version>
      <exclusions>
        <exclusion>
          <artifactId>jmf</artifactId>
          <groupId>javax.media</groupId>
        </exclusion>
        <exclusion>
          <groupId>com.github.umjammer.rococoa</groupId>
          <artifactId>rococoa-cocoa</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.rococoa</groupId>
          <artifactId>rococoa-cocoa</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.rococoa</groupId> <!-- org.rococoa / com.github.umjammer.rococoa -->
      <artifactId>rococoa-core</artifactId>
      <version>0.8.14</version>
    </dependency>
    <dependency>
      <groupId>com.google.cloud</groupId>
      <artifactId>google-cloud-texttospeech</artifactId>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.argparse4j</groupId>
      <artifactId>argparse4j</artifactId>
      <version>0.9.0</version>
    </dependency>

    <dependency>
      <groupId>sen</groupId>
      <artifactId>sen</artifactId>
      <version>1.2.3</version>
    </dependency>
    <dependency>
      <groupId>com.atilika.kuromoji</groupId>
      <artifactId>kuromoji-ipadic</artifactId>
      <version>0.9.0</version>
    </dependency>
    <dependency>
      <groupId>com.worksap.nlp</groupId>
      <artifactId>sudachi</artifactId>
      <version>0.7.3</version>
    </dependency>

    <dependency>
      <groupId>com.ibm.icu</groupId>
      <artifactId>icu4j</artifactId>
      <version>77.1</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-util-screenscraping</artifactId>
      <version>1.0.18</version>
      <exclusions>
        <exclusion>
          <artifactId>vavi-net-auth-amazon</artifactId>
          <groupId>com.github.umjammer.vavi-net-auth</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>${freetts.groupId}</groupId>
      <artifactId>freetts-jsapi10</artifactId>
      <version>${freetts.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>1.7.36</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${freetts.groupId}</groupId>
      <artifactId>freetts</artifactId>
      <version>${freetts.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer.jsapi</groupId>
          <artifactId>javax.speech</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.umjammer.jsapi</groupId>
          <artifactId>org.jvoicexml.jsapi2.freetts</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>${freetts.groupId}</groupId>
      <artifactId>cmulex</artifactId>
      <version>${freetts.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${freetts.groupId}</groupId>
      <artifactId>en_us</artifactId>
      <version>${freetts.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${freetts.groupId}</groupId>
      <artifactId>cmu_us_kal</artifactId>
      <version>${freetts.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>9.7.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
